# mediation-calculator

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
docs/superpowers/plans/: 2026-03-20-gladice-implementation.md
docs/superpowers/specs/: 2026-03-20-gladice-mediation-calculator-design.md
src/: App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql  002_add_mediation_date.sql  003_add_move_timestamps.sql
src-tauri/src/: calculations.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: mediations.rs  mod.rs  rounds.rs  settings.rs
src/components/: AutocompleteInput.tsx  ConvergenceChart.tsx  LandingPage.tsx  MediationWorkspace.tsx  MetadataPanel.tsx  MoveInputRow.tsx  NotesEditor.tsx  RoundInputRow.tsx  RoundsTable.tsx  SpeculativeRounds.tsx  StatusBadge.tsx  TabBar.tsx  ThemeSelector.tsx  VariationsTable.tsx
src/context/: TabContext.tsx  ThemeContext.tsx
src/themes/: themes.ts
src/utils/: exportChart.ts  exportTable.ts
