[package]
name = "gladice"
version = "0.1.0"
description = "Gladice - Mediation Midpoint Calculator"
authors = ["you"]
edition = "2021"

[lib]
name = "gladice_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
